--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
-streamlit
-streamlit-lottie
-pandas
-matplotlib
-seaborn
-scikit-learn
-prophet
-langchain
+altair>=4.2.0
+faiss-cpu>=1.7.2
+fpdf>=1.7.2
 langchain-experimental
-openai
+langchain>=0.1.0
+matplotlib>=3.4.0
+numpy>=1.21.0
+openai>=1.0.0
+pandas>=1.3.0
+prophet
+scikit-learn
+seaborn
+statsmodels>=0.13.0
+streamlit-chat>=0.0.2
+streamlit-lottie
+streamlit>=1.25.0
 tiktoken
-streamlit-chat
-faiss-cpu
-fpdf
