--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
     "codespaces": {
       "openFiles": [
         "README.md",
-        "hospitalapp_wip.py"
+        "Hospital_BI_Reporting_Tool.py"
       ]
     },
     "vscode": {
