--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,5 @@
 {
-  "name": "Python 3",
-  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+  "name": "Hospital BI Streamlit App",
   "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
   "customizations": {
     "codespaces": {
@@ -17,17 +16,13 @@
       ]
     }
   },
-  "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt; [ -f requirements.txt ] && pip3 install --user -r requirements.txt; pip3 install --user streamlit; echo '✅ Packages installed and Requirements met'",
-  "postAttachCommand": {
-    "server": "streamlit run Hospital_BI_Reporting_Tool.py --server.enableCORS false --server.enableXsrfProtection false"
-  },
+  "updateContentCommand": "sudo apt-get update && sudo apt-get upgrade -y && if [ -f packages.txt ]; then sudo xargs -a packages.txt apt-get install -y; fi && if [ -f requirements.txt ]; then pip install -r requirements.txt; fi && pip install streamlit && echo '✅ All packages installed.'",
+  "postAttachCommand": "streamlit run Hospital_BI_Reporting_Tool.py --server.enableCORS false --server.enableXsrfProtection false",
+  "forwardPorts": [8501],
   "portsAttributes": {
     "8501": {
-      "label": "Application",
+      "label": "📊 Hospital BI App",
       "onAutoForward": "openPreview"
     }
-  },
-  "forwardPorts": [
-    8501
-  ]
+  }
 }
